--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ h2{
     color: orange;
 }
 .ordhek{
-    width: 40%;
+    width: 40%;;
     float: left;
     margin-left: 5%;
     padding-left: 2%;
@@ -39,8 +39,37 @@ section{
     border-radius: 5px;
 
 }
-.majhe img{
-    width: 30%;
-    float: left;
-    margin-top: 10%;
+.ordhek img{
+    float:left;
+    width: 60%;
+}
+#jhamela{
+    background-image: url("Images/dream-bg.png");
+    background-repeat: no-repeat;
+    background-position: right;
+}
+.single-experience{
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 5px;
+    height: 80%;
+    background-color: white;
+}
+.experience-area{
+    background-image: url("Images/exp-bg.png");
+    background-repeat: no-repeat;
+    background-position: left;
+}
+#full-stack{
+    border-left: 7px solid;
+    border-image:linear-gradient(180deg,lightsalmon, tomato);
+    border-image-slice: 1;
+}
+#baby-web{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, blue, cyan);
+    border-image-slice:1 ;
+}
+footer p{
+    text-align:center;
+    font-size: 12px;
 }
